Fix layout on mobile

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -415,6 +415,9 @@ nav > ul li a:active {
 	clip-path: url(#screenMask);
 	margin-left: 26px;
 	margin-top: 23px;
+}
+
+.absolute {
 	position: absolute;
 }
 
